# Graphs

./: .env.example  .gitignore  README.md  app.py  build.sh  generate_presentation.py  graphs.py  presentation_gui.py  presentation_gui.spec  pyproject.toml  requirements.txt  settings.py  utils.py
cached_files/: DR__Reporte_detallado_general.parquet
files/: BaseActivos__reporte-base-activos-28_5_2025 10_51_14.xlsx  DR__Reporte_detallado_general.xlsx  NivelesMadurez__Reporte_NM_25_04_25.xlsx
files/cached_files/: Calidad__Pases_a_Produccion_y_Reversiones_BCP_TI_2025__Consolidado_Pases.parquet  Calidad__Pases_a_Produccion_y_Reversiones_BCP_TI_2025__Consolidado_Reversiones.parquet  NivelesMadurez__Reporte_NM_25_04_25.parquet
ind_graphs/: calidad_pases.py  dr.py  niveles_madurez.py  tmd.py
inputs/: Template.pptx
reportgen/: __init__.py  __main__.py  config.py  graphs.py  logging_cfg.py
reportgen/ppt/: __init__.py  generate.py
